# sprint0

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
frontend/: .gcloudignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx
orchestrator/app/: agent.py  agreements.py  assign.py  auth.py  canned.py  const.py  contracts.py  corpus.py  dedup.py  demo.py  demo_store.py  eventlog.py  execute.py  gitlab.py  gitlab_hooks.py  grading.py  graph.py  graphstore.py  handoff.py  lineage.py  main.py  policy.py  rag.py  reason.py  relay.py  routing.py  runtime.py  scheduler.py  scoring.py  solutions.py  staffing.py  strategist.py  tasks.py  team.py  trace.py
orchestrator/tests/: conftest.py  test_agreements.py  test_code_search_expand.py  test_contracts.py  test_corpus.py  test_dedup.py  test_demo_mode.py  test_durability.py  test_eventlog.py  test_gate_routing.py  test_gitlab.py  test_gitlab_hooks.py  test_grading.py  test_graph.py  test_graphstore.py  test_handoff.py  test_integration_endpoint.py  test_lanes.py  test_lineage.py  test_llm_safety.py  test_relay_integration.py  (+18 more)
scripts/: agent_smoke.py  architect_test.py  bootstrap.sh  debug_rag.py  demo_e2e.py  handoff_test.py  mcp_probe.py  mcp_vector_search.py  onboard_test.py  reason_test.py  reset.sh  reset_session.py  scaffold_test.py  seed_agency.py  seed_load.py  seed_team.py  setup_check.py  smoke_test.py
seed/: agency_projects.json  developer_profiles.json  past_projects.json  team.json
(+134 files in other folders)
