[project]
name = "orchestrator-sprintzero"
version = "0.1.0"
description = "Orchestrator.AI (SprintZero) — backend + MCP servers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "fastmcp>=2.0",
    "python-multipart>=0.0.12",
    "google-genai>=2.6.0",
    "pymongo>=4.17.0",
    "httpx>=0.28.1",
    "voyageai>=0.3.7",
    "google-adk>=1.10.0",
    "pypdf>=6.12.2",
]

# No [build-system] on purpose → uv treats this as a non-packaged project
# (just manages the shared .venv). Per-phase deps (pymongo, google-genai,
# pypdf, weasyprint, httpx) get added in their phase, not up front.

[dependency-groups]
dev = ["pytest>=8.3", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["orchestrator"]
testpaths = ["orchestrator/tests"]
